<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/textview_resend_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/resend_verification_email"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_resend_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textColorHint="#80000000"
        app:layout_constraintStart_toStartOf="@+id/textview_resend_dialog"
        app:layout_constraintTop_toBottomOf="@+id/textview_resend_dialog"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_resend_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="#80000000"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editText_resend_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_resend_email"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView_resend_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textColor="#0284FE"
        app:layout_constraintStart_toStartOf="@+id/editText_resend_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_resend_password" />

    <TextView
        android:id="@+id/textView_resend_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/confirm"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textColor="#0284FE"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_resend_cancel"
        app:layout_constraintEnd_toEndOf="@+id/editText_resend_password" />

</androidx.constraintlayout.widget.ConstraintLayout>