<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="#80000000"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/textView_forgot_password"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView_cancel_forgot_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textColor="#00ABFC"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editText_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_forgot_password" />

    <TextView
        android:id="@+id/textView_confirm_forgot_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/confirm"
        android:textSize="20sp"
        android:textColor="#00ABFC"
        android:fontFamily="sans-serif"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_cancel_forgot_pw"
        app:layout_constraintEnd_toEndOf="@+id/editText_forgot_password" />
</androidx.constraintlayout.widget.ConstraintLayout>